# E4Streamer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/model/: Command.cpp  Command.h  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  Device.cpp  Device.h  Disconnectable.h  Response.cpp  Response.h  Sample.cpp  Sample.h  Server.cpp  Server.h  Stream.cpp  Stream.h
src/model/commands/: Connect.cpp  Connect.h  Disconnect.cpp  Disconnect.h  DiscoverDevices.cpp  DiscoverDevices.h  Register.cpp  Register.h  Subscription.cpp  Subscription.h  Unregister.cpp  Unregister.h
src/view/: ConnectionPage.cpp  ConnectionPage.h  DevicePage.cpp  DevicePage.h  RecordingPage.cpp  RecordingPage.h  RemoteConnectionPage.cpp  RemoteConnectionPage.h  ServerPage.cpp  ServerPage.h  Wizard.cpp  Wizard.h
src/view/util/: FileSelector.cpp  FileSelector.h  PortBox.cpp  PortBox.h
src/view/widgets/: Devices.cpp  Devices.h  ServerConfig.cpp  ServerConfig.h  StreamWidget.cpp  StreamWidget.h
tests/: CommandTests.cpp  CommandTests.h  ConnectionTests.h  main.cpp
